[fix] Silly symlink monkey businesses (plural)
- No need for node_modules/toolbox-utils/toolbox-utils
- Use a relative symlink
- Delete it first, so that the `postinstall` command becomes idempotent

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     }
   },
   "scripts": {
-    "postinstall": "ln -s \"$(pwd)/index.js\" \"$(pwd)/node_modules/.bin/toolbox\" && ln -s \"$(pwd)\" \"$(pwd)/node_modules/toolbox-utils\"",
+    "postinstall": "set -e -x; rm -f node_modules/.bin/toolbox; ln -s ../../index.js node_modules/.bin/toolbox",
     "postuninstall": "npm run postinstall"
   },
   "dependencies": {
