--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toolbox-utils",
+  "name": "epfl-elements-toolbox-utils",
   "version": "1.5.0",
   "description": "Resources for generator-toolbox",
   "license": "MIT",
